import com.google.gson.Gson

class GsonSerializer<T>(private val clazz: Class<T>) : ObjectSerializer<T> {
    private val gson = Gson()

    override fun serialize(obj: T): String {
        return gson.toJson(obj)
    }

    override fun deserialize(data: String): T {
        return gson.fromJson(data, clazz)
    }
}